--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -21,7 +21,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Attenberg - Architectural visualisation - 3d renders</title>
+    <meta name="description" content="We create photorealistic architectural visualisations & 3D renders. We make modern high-quality 3D renderings of your projects. We aim for a minimal photographic feel. Less is more.">
   </head>
   <body>
     <noscript>
